# waggle

./: .gitignore  .gitigore  Cargo.toml  LICENSE  README.md  file_handlers.go  go.mod  go.sum  graphs.go  helpers.go  logger_handler.go  main.go  package-lock.json  readme.md  replay.go  rustfmt.toml  simulate-robot.py  socket.go  webrtc.go
client/: .gitignore  index.html  package-lock.json  package.json  simulate.py
client/src/: App.tsx  aviWriter.ts  csvHelpter.ts  index.css  parseBinary.ts
client/src/components/: BatteryStatus.tsx  ConfigurableVariable.tsx  ConfigurableVarsEditor.tsx  ConnectionStatus.tsx  LiveGraph.tsx  LogTerminal.tsx  MetricCard.tsx  Notifications.tsx  PlayBar.tsx  RecordSession.tsx  SignalStatus.tsx  Toggle.tsx
client/src/hooks/: useReplayPlayer.ts  useWebSocket.ts
client/src/types/: index.ts
docs/: README.md  README_out_of_date.md  Waggle Manual.md  api.md
examples/: simulator.rs
src/: handlers.rs  helpers.rs  lib.rs  logger.rs  main.rs  replay.rs  socket.rs  waggle_data.rs
static/: index.html  styles.css
static/scripts/: display_cv_mats.js  editor.js  graph.js  minimap.js  ws_handler.js
static/scripts/uplot/: uPlot.iffe.min.js
tools/: export_video.py  install.sh  replay.py  requirements.txt  run.sh  shape.py  simulate-robot.py  simulate.py
tools/simulator/: rose.py  simulate.py
tools/simulator-rust/: Cargo.toml  out_sim.py
tools/simulator-rust/src/: image.rs  main.rs
