[package]
name = "waggle"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
futures = "0.3"
tower = "0.4"
bytes = "1.5"
tokio-stream = "0.1"
uuid = { version = "1", features = ["v4"] }
image = "0.25"
base64 = "0.21"
parking_lot = "0.12"
tower-http = { version = "0.5", features = ["fs"] }
easy-svg = "0.3.0"
rand = "0.8.5"
reqwest = { version = "0.12.23", features = ["json"] }